Update کیف پول - 09.md

--- a/Banking/کیف پول - 09.md
+++ b/Banking/کیف پول - 09.md
@@ -1,6 +1,20 @@
+- [کیف پول](#%DA%A9%DB%8C%D9%81%20%D9%BE%D9%88%D9%84)
+- [شارژ کیف پول](#%D8%B4%D8%A7%D8%B1%DA%98%20%DA%A9%DB%8C%D9%81%20%D9%BE%D9%88%D9%84)
+- [افزایش موجودی مستقیم](#%D8%A7%D9%81%D8%B2%D8%A7%DB%8C%D8%B4%20%D9%85%D9%88%D8%AC%D9%88%D8%AF%DB%8C%20%D9%85%D8%B3%D8%AA%D9%82%DB%8C%D9%85)
+- [درخواست تسویه](#%D8%AF%D8%B1%D8%AE%D9%88%D8%A7%D8%B3%D8%AA%20%D8%AA%D8%B3%D9%88%DB%8C%D9%87)
+- [تسویه از حساب صنفی کسب و کار](#%D8%AA%D8%B3%D9%88%DB%8C%D9%87%20%D8%A7%D8%B2%20%D8%AD%D8%B3%D8%A7%D8%A8%20%D8%B5%D9%86%D9%81%DB%8C%20%DA%A9%D8%B3%D8%A8%20%D9%88%20%DA%A9%D8%A7%D8%B1)
+- [انتقال وجه کاربر به کاربر](#%D8%A7%D9%86%D8%AA%D9%82%D8%A7%D9%84%20%D9%88%D8%AC%D9%87%20%DA%A9%D8%A7%D8%B1%D8%A8%D8%B1%20%D8%A8%D9%87%20%DA%A9%D8%A7%D8%B1%D8%A8%D8%B1)
+- [دنبال کردن کسب وکار](#%D8%AF%D9%86%D8%A8%D8%A7%D9%84%20%DA%A9%D8%B1%D8%AF%D9%86%20%DA%A9%D8%B3%D8%A8%20%D9%88%DA%A9%D8%A7%D8%B1)
+- [انتقال وجه به مشتریان](#%D8%A7%D9%86%D8%AA%D9%82%D8%A7%D9%84%20%D9%88%D8%AC%D9%87%20%D8%A8%D9%87%20%D9%85%D8%B4%D8%AA%D8%B1%DB%8C%D8%A7%D9%86)
+- [دریافت صورتحساب](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA%20%D8%B5%D9%88%D8%B1%D8%AA%D8%AD%D8%B3%D8%A7%D8%A8)
+- [گزارش انتقال وجوه به کارت](#%DA%AF%D8%B2%D8%A7%D8%B1%D8%B4%20%D8%A7%D9%86%D8%AA%D9%82%D8%A7%D9%84%20%D9%88%D8%AC%D9%88%D9%87%20%D8%A8%D9%87%20%DA%A9%D8%A7%D8%B1%D8%AA)
+- [دسترسی به نمونه کدها](#%D8%AF%D8%B3%D8%AA%D8%B1%D8%B3%DB%8C%20%D8%A8%D9%87%20%D9%86%D9%85%D9%88%D9%86%D9%87%20%DA%A9%D8%AF%D9%87%D8%A7)
+
+
 ## کیف پول
+
 روش‌های مختلفی برای پرداخت فاکتور وجود دارد که یکی از آن‌ها از پرداخت از طریق کیف‌ پول است. 
-با استفاده از این سرویس شما می‌توانید برای کاربران خود کیف پول تعریف نمایید، همچنین برای کاربران‌تان درازای خرید محصولات یا برخورداری از خدمات کسب‌وکارشان، فاکتور صادر نمایید و پرداخت آن را پیگیری نمایید.  توجه داشته باشید که استفاده از کیف پول پاد در کسب‌وکارهایی که می‌خواهند از سرویس‌های پاد استفاده کنند یکی از شروط اصلی است.
+با پیاده‌سازی سیستم کیف‌پول، در واقع شما در حساب کاربری افراد یک حساب بانکی مجازی ایجاد می‌کنید. هر یک از کاربران می‌توانند حساب مجازی خود را با هر مبلغی که بخواهند شارژ نمایند. پس از آن نیازی نیست کاربران برای پرداخت هزینه‌ی فاکتور خود اطلاعات کارت بانکی خود را وارد نمایند بلکه تنها با زدن دکمه‌ی پرداخت از طریق کیف پول، در کم‌ترین زمان ممکن و بسیار راحت هزینه‌ی سفر را پرداخت خواهد کرد. توجه داشته باشید که استفاده از کیف پول پاد در کسب‌وکارهایی که می‌خواهند از سرویس‌های پاد استفاده کنند یکی از شروط اصلی است.
 
 <div class="box-end">
 </div>
@@ -11,26 +25,43 @@
 
 - انتخاب بسته افزایشی
 
-```curl
+<div class="tab-start">
+</div>
+
+# [http](#tab/http)
+
+``` http
+
 GET  [private-calls-address]/v1/pbc/BuyCredit/
 ?redirectUri=[redirectURL]
 &callUri=[The function that will be called at the end of charge]
+
 ```
 
+<div class="tab-end">
+</div>
 
 
 - انتقال مستقیم به درگاه با مبلغ معلوم
 
 در این حالت کاربر صفحه انتخاب بسته را نمی‌بیند و مستقیماً وارد درگاه بانکی می‌گردد. برای این منظور کاربر را به صفحه زیر هدایت نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+# [http](#tab/http)
+
+``` http
+
 GET [private-calls-address]/v1/pbc/BuyCredit/
 ?amount= [the amount to charge wallet]
 &redirectUri=[redirectURL]
 &callUri=[The function that will be called at the end of charge]
+
 ```
 
-
+<div class="tab-end">
+</div>
 
 پس از برگشت از درگاه مقادیر زیر به آدرس redirectUri برگردانده می‌شوند:
 
@@ -45,7 +76,10 @@ paid&tref
 
 ابتدا توسط سرویس زیر یک فاکتور افزایش موجودی ایجاد نموده، سپس با hash ایجاد شده کاربر را به درگاه هدایت نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -58,13 +92,19 @@ Parameters:
         billNumber= *	                // شماره قبض یکتا جهت جلوگیری از اجرای تراکنش تکراری
         wallet= *                            // کد کیف پول
         redirectUrl= *                      // آدرس برگشت پس از اتمام فرایند پرداخت با کارت بانکی
+
 ```
 
+<div class="tab-end">
+</div>
 
 
 خروجی سرویس بالا شامل یک hash می باشد که فقط 15 دقیقه معتبر است:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 {
 
   "hasError": false,
@@ -80,19 +120,28 @@ Parameters:
   "result": "d3bb4e8dbe2b4d3d94e0f056a7c61753"
 
 }
-```
 
+```
+<div class="tab-end">
+</div>
 
 
 مقدار آن را در آدرس زیر قرار داده و کاربر را به آن صفحه هدایت نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+
+```
 MAIN server:
         https://core.pod.land/nzh/payAnyCreditInvoice?hash=&gateway=PEP
 
 SANDBOX server:
         https://sandbox.pod.land:8080/nzh/payAnyCreditInvoice?hash=&gateway=LOC
 ```
+
+<div class="tab-end">
+</div>
 
 
 
@@ -102,7 +151,10 @@ tref=636980964366129546&payed=false&gws_rd=ssl
 
 مقدار tref شماره پیگیری تراکنش شاپرکی می‌باشد و در این مرحله لازم است شارژ کیف پول توسط سرویس زیر تایید گردد:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -111,8 +163,11 @@ Url:
         [platform-address]/nzh/biz/verifyCreditInvoice
 Parameters:
        billNumber= * 	                // شماره قبض یکتا وارد شده در سرویس صدور فاکتور
+
 ```
 
+<div class="tab-end">
+</div>
 
 
 در صورتی که عملیات پرداخت موفق نبوده باشد با تایید فاکتور شارژ کیف پول خطای 32 با پیغام "فاکتور قبلا لغو شده است" دریافت خواهید نمود.
@@ -130,7 +185,10 @@ Parameters:
 
 کسب و کار می‌تواند از طریق API زیر، مبلغ مورد نظر خود را از کیف پولش به شماره شبای ثبت شده در پروفایل خود منتقل کند. در صورتی که شماره شبا یا نام و نام خانوادگی شخص در پروفایل ثبت نشده باشد این سرویس خطا خواهد داد.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]            //توکن صاحب حساب
         _token_issuer_=1
@@ -142,16 +200,23 @@ Parameters:
         currencyCode=               //default:IRR
         uniqueId=                     //ارسال شناسه یکتا و دلخواه به منظور جستجو در لیست    // به منظور مشاهده تمام پارامترها به لینک تست و نمونه کد مراجعه نمایید
 ```
-
+<div class="tab-end">
+</div>
 
 
 کد ارز شامل کد سه حرفی رایج برای واحدهای پولی است. مانند IRR و USD
 
-### تسویه از حساب صنفی کسب و کار
+<div class="box-end">
+</div>
+
+## تسویه از حساب صنفی کسب و کار
 
 در حساب های صنفی همواره مبلغی به عنوان مبلغ قابل تسویه وجود دارد که شامل دارایی کسب و کار بجز فاکتورهای باز او یا فاکتورهایی که مبلغ آن ها هنوز واریز نشده است، می باشد. مبلغ قابل تسویه را می توان از طریق API زیر تسویه نمود:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -169,6 +234,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **انتقال وجه از حساب کسب و کاری به کارت بانکی (با کسر کارمزد) یا شماره شبا**
@@ -185,7 +252,10 @@ SETTLEMENT_TOOL_CARD
 
 و به طور مثال، در صورتی که انتقال از طریق کارت را انتخاب نموده‌اید، در قسمت toolId شماره کارت مقصد را وارد نمایید و در غیر این صورت شماره شبا را وارد نمایید.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -204,13 +274,18 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **گزارش وضعیت تسویه**
 
 جهت دریافت لیست تسویه‌ها و وضعیت آن‌ها از سرویس زیر استفاده نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -225,7 +300,8 @@ Parameters:
         toAmount= [upper limit of requested amount]
 
 ```
-
+<div class="tab-end">
+</div>
 
 
 | ستون 1               | ستون 2                                  |
@@ -239,7 +315,10 @@ Parameters:
 
 در صورتی که تسویه خودکار برای یک کسب و کار فعال شود، مبلغ قابل تسویه آن کسب‌وکار به طور خودکار، یکبار در شبانه روز به شماره شبای اعلام شده در پروفایل کسب‌وکار یا شماره شبای اعلامی در سرویس زیر، تسویه می‌گردد. برای فعالسازی تسویه خودکار سرویس زیر را با توکن کسب و کار دارنده حساب فراخوانی نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=API_TOKEN           //توکن دارنده حساب
         _token_issuer_=1
@@ -254,14 +333,18 @@ Parameters:
         currencyCode=               //default=IRR
 
 ```
-
+<div class="tab-end">
+</div>
 
 
 **لغو تسویه خودکار**
 
 با سرویس ذیل می‌توانید تسویه خودکار را غیرفعال نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=API_TOKEN           //توکن دارنده حساب
         _token_issuer_=1
@@ -272,7 +355,8 @@ Parameters:
         currencyCode=                //default=IRR
 
 ```
-
+<div class="tab-end">
+</div>
 
  <div class="box-end">
 </div>
@@ -283,7 +367,10 @@ Parameters:
 
 کسب و کار باید سرویس زیر را برای این منظور صدا بزند. دقت نمایید که مبالغی که منتقل می‌شوند باید تراز باشند، یعنی جمع مقادیر صفر شود. در شبه کد زیر، اعتبار از حساب صنفی به حساب کیف پول کسب و کار منتقل می‌گردد.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -297,14 +384,17 @@ Parameters:
         uniqueId=                            //ارسال شناسه دلخواه و یکتا به منظور جستجو در لیست 
 
 ```
-
-
+<div class="tab-end">
+</div>
 
 لیست انتقال‌های بین حساب‌های مجازی و کیف پول خود را با سرویس زیر دریافت نمایید:
 
 هم‌چنین می‌توانید با لحاظ شناسه یکتا برای انتقال‌های خود(uniqueId) نسبت به جستجو بر اساس همان شناسه اقدام نمایید.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -320,13 +410,18 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **انتقال وجه از کیف پول به کیف پول کاربر دیگر (مخاطب)**
 
 کاربر می‌تواند مبلغی از اعتبار موجود در کیف پول خود را به کاربر دیگر که لازم است جزء مخاطبین او باشد، انتقال دهد. ثبت مخاطبان کاربر از طریق شماره موبایل یا ایمیل یا نام کاربری یا همه آنها صورت می‌گیرد. سپس از طریق سرویس زیر امکان انتقال وجه به مخاطب برای کاربر فراهم می‌گردد:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[access_token]
         _token_issuer_=1
@@ -342,14 +437,18 @@ Parameters:
         uniqueId=                //ارسال شناسه دلخواه و یکتا به منظور جستجو در لیست
 
 ```
-
+<div class="tab-end">
+</div>
 
 
 و با سرویس زیر لیست انتقال‌ها را دریافت کنید:
 
 هم‌چنین می‌توانید با لحاظ شناسه یکتا برای انتقال‌های خود(uniqueId) نسبت به جستجو بر اساس همان شناسه اقدام نمایید.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 Header:
         _token_ = [access_token]
         _token_issuer_ = 1    
@@ -369,11 +468,14 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
  <div class="box-end">
 </div>
 
-## ‌‌دنبال کردن کسب وکار
+
+## دنبال کردن کسب وکار
 
 برای انجام عملیات کیف پول، مانند سایر سرویس های پلتفرم، باید کاربر جزو دنبال کنندگان کسب وکار شما باشد تا بتوانید از برخی سرویس های پلتفرم(از جمله، انتقال اعتبار به مشتریان) استفاده نمایید.
 
@@ -381,7 +483,10 @@ Parameters:
 
 توجه داشته باشید کاربر باید در پاد لاگین باشد و با داشتن توکن جاری کاربر و فراخوانی آن در سرویس زیر، می‌توانید کاربر را به دنبال کنندگان کسب و کار خود (لیست مشتریان)، اضافه نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER  _token_=[access_token] & _token_issuer_=1
 POST [platform-address]/nzh/follow/
 ?businessId=[businessid]		کد شناسایی کسب و کار
@@ -389,11 +494,16 @@ POST [platform-address]/nzh/follow/
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 در این سرویس نیز شناسایی کاربر از روی توکن دریافت شده در هدر انجام می‌شود و در صورت موفقیت پاسخ زیر را برمی‌گرداند:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 {
 	"hasError": false,
 	"errorCode": 0,
@@ -403,21 +513,30 @@ POST [platform-address]/nzh/follow/
 }
 
 ```
-
+<div class="tab-end">
+</div>
 
 
 توجه داشته باشید که businessId کد شناسایی کسب و کار شما می باشد. در صورتی که آن را ندارید از سرویس زیر برای دریافت آن استفاده کنید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 GET [platform-address]/nzh/biz/getBusiness/?_token_=[API_TOKEN]&_token_issuer_=1
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 برای دریافت لیست دنبال‌کنندگان کسب و کار خود از سرویس زیر استفاده نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -430,6 +549,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
  <div class="box-end">
 </div>
@@ -445,7 +566,10 @@ Parameters:
 
 کسب‌وکار می تواند از طریق API زیر، مبلغ مورد نظر خود را به کیف پول دنبال کنندگان خود انتقال دهد:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -463,6 +587,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 سرویس زیر نیز برای انتقال وجه به مشتریان به کار می‌رود با این تفاوت که پس از فراخوانی این سرویس مشتری یک پیامک شامل موارد زیر دریافت می‌کند و در صورتی که کد لغو را ارسال ننماید مبلغ به شماره شبا موجود در پروفایل کاربر منتقل می‌گردد. در صورت ارسال کد لغو در پیامک، مبلغ منتقل شده، در کیف پول کاربر تا مراجعه یا خرید بعدی باقی می‌ماند.
@@ -472,7 +598,10 @@ Parameters:
 - نام و نام خانوادگی صاحب حساب
 - کد امنیتی
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -490,13 +619,18 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **دریافت لیست انتقال‌ها به مشتریان و امکان جستجو بر اساس شناسه یکتا:**
 
 با سرویس زیر، لیست انتقال‌ها را دریافت نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -518,6 +652,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **انتقال به مشتریان بر اساس فاکتور:**
@@ -530,7 +666,10 @@ Parameters:
 
 نحوه انتقال پول، بر اساس نحوه پرداخت فاکتور ارسالی، خواهد بود. به عنوان مثال، اگر پرداخت فاکتور به صورت نقدی بوده است، انتقال به مشتری با فراخوانی این سرویس ممکن نخواهد بود و در ریسپانس دریافتی از فراخوانی سرویس، همان مبلغ موجود در حساب کسب و کار(کیف پول و صنفی) برگردانده خواهد شد.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -548,13 +687,18 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 **لیست انتقال به مشتریان بر اساس فاکتور:**
 
 با سرویس زیر می‌توانید لیست انتقالات بر اساس فاکتور را دریافت نمایید.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -576,6 +720,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
  <div class="box-end">
 </div>
@@ -584,7 +730,10 @@ Parameters:
 
 توسط سرویس زیر می‌توانید تمام تراکنش­ هایی که در حساب­ های صنفی کسب و کار شما انجام شده را دریافت و مشاهده نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -602,11 +751,15 @@ Parameters:
 
 ```
 
-
+<div class="tab-end">
+</div>
 
 همچنین از طریق سرویس زیر صورتحساب روی کیف پول خود را دریافت می‌نمایید:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -624,13 +777,18 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 هم چنین امکان دریافت صورتحساب در قالب یک فایل اکسل وجود دارد.
 
 ارسال یکی از پارامترهای dateFrom یا dateTo اجباری است. در صورت ارسال پارامتر dateFrom  ارسال dateTo اختیاری است و بالعکس.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -642,6 +800,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
  <div class="box-end">
 </div>
@@ -674,7 +834,10 @@ Parameters:
 
 4- CARD_TO_CARD_STATUS_CREATED
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 Header:
     _token_=[API_TOKEN]
     _token_issuer_=1
@@ -697,11 +860,16 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 خروجی سرویس در صورتی که hasError=false باشد در بخش result  به شکل زیر است:
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 [
   {
     "id": 0,
@@ -735,6 +903,8 @@ Parameters:
 
 ```
 
+<div class="tab-end">
+</div>
 
 
 مقدار causeId برابر با شناسه settlementای است که باعث انجام کارت به کارت شده است.
@@ -749,7 +919,10 @@ Parameters:
 
 توجه داشته باشید شناسه کارت به کارت، در آبجکت items برگردانده می‌شود.
 
-```curl
+<div class="tab-start">
+</div>
+
+```
 Header:
        _token_=[API_TOKEN]
        _token_issuer_=1
@@ -760,8 +933,19 @@ Parameters:
         cardNumber= // شماره کارت
 
 ```
+<div class="tab-end">
+</div>
 
+<div class="box-end">
+</div>
 
+## دسترسی به نمونه کدها
+
+شما می توانید به نمونه کدها از طریق لینک زیر دسترسی داشته باشید:
+
+[دانلود نمونه کد](https://github.com/podiumir/samples/tree/master/src/csharp/Plan)
+
+https://raw.githubusercontent.com/podiumir/docs/master/Banking/03%20-%20USSD.md
 
 <div class="box-end">
 </div>
