Update 04 - بن کارت.md

--- a/Banking/04 - بن کارت.md
+++ b/Banking/04 - بن کارت.md
@@ -95,7 +95,7 @@
 <div class="box-end">
 </div>
 
-## دریافت و جستجو لیست بن‌ها
+## دریافت و جستجو لیست بن ها
 
 با سرویس زیر امکان خواهید داشت در بین لیست‌های بن کسب و کارتان جستجو و آن را دریافت نمایید:
 
