Update کیف پول - 09.md

--- a/Banking/کیف پول - 09.md
+++ b/Banking/کیف پول - 09.md
@@ -181,7 +181,7 @@ Parameters:
 
 **تسویه از طریق پنل کسب و کار**    
 
-### تسویه از حساب مشتری (برداشت از کیف پول)
+### تسویه از حساب مشتری برداشت از کیف پول
 
 کسب و کار می‌تواند از طریق API زیر، مبلغ مورد نظر خود را از کیف پولش به شماره شبای ثبت شده در پروفایل خود منتقل کند. در صورتی که شماره شبا یا نام و نام خانوادگی شخص در پروفایل ثبت نشده باشد این سرویس خطا خواهد داد.
 
