Update 00 - فاکتور.md

--- a/Banking/فاکتور/00 - فاکتور.md
+++ b/Banking/فاکتور/00 - فاکتور.md
@@ -677,7 +677,7 @@
 <div class="box-end">
 </div>
 
-## انتقال وجه از حساب کسب و کاری به کارت بانکی (با کسر کارمزد) یا شماره شبا
+## انتقال وجه از حساب کسب و کاری به کارت بانکی با کسر کارمزد یا شماره شبا
 کسب و کار می تواند با استفاده از سرویس زیر مبلغ مورد نظر خود را از حساب مجازی به یک شماره کارت یا یک شماره شبا بانکی منتقل نماید. بدیهی است که در صورت استفاده از ابزار کارت به کار، کارمزد بانکی از حساب کسب و کار کسرخواهد شد و در صورت استفاده از ابزار پایا، انتقال وجه در زمان مصوب بانک مرکزی انجام خواهد شد.
 برای پارامتر toolCode از یکی از مقادیر زیر استفاده نمایید:
 SETTLEMENT_TOOL_SATNA
