--- a/Banking/احراز هویت/00 - احراز هویت.md
+++ b/Banking/احراز هویت/00 - احراز هویت.md
@@ -1,5 +1,5 @@
 
-
+## احراز هویت
 ## SSO
 
 ### نصب پکیج pod-sso-service
@@ -270,7 +270,7 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
 با استفاده از کد دریافتی از متد verifyOTP و ارسال آن از طریق متد getAccessTokenByOTP توکن دسترسی را از سرور SSO دریافت کنید: 
 
 
-       ```PHP
+```PHP
        $params = [
             "code" => "put code", # use code that you received after verify otp
         ];
@@ -284,7 +284,8 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
         } catch (PodException $e) {
             print_r($e->getResult());
         }
-        ‍‍‍```
+   
+```        
 
-```        <div class="box-end">
+<div class="box-end">
 </div>
