Update درگاه پرداخت - 02.md

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -19,3 +19,174 @@ Parameters:
 
 <div class="box-end">
 </div>
+
+
+
+## پرداخت فاکتور با کیف پول
+
+جهت پرداخت مبلغ فاکتور با حساب کیف پول سه حالت وجود دارد:
+
+1. مشتری حتما وارد سامانه احراز هویت یکپارچه (SSO) در وب شده و از طریق درگاه پاد، گزینه ی کیف پول را انتخاب نماید.
+2. کسب و کار با توکن ثابت خودش از کیف پول خود، مبلغ فاکتور را با API پرداخت نماید.
+3. مشتری قبلا تا سقف مبلغ مشخص مجوز برداشت از کیف پول خود را به کسب و کار داده است یا یک طرح را فعال نموده است.
+
+**1. پرداخت از کیف پول با ورود به SSO**
+
+مشتری برای مشاهده فاکتور خود و پرداخت آن از طریق کیف پول خود، لازم است به آدرس زیر هدایت شود. در این صفحه کاربر امکان پرداخت وجه از طریق درگاه بانک را نیز دارد و میتواند از اعتبار خرید نیز در صورت وجود استفاده نماید.
+
+مقدار **invoiceId**، مقداری است که از پاسخ سرویس **issueInvoice** با عنوان id دریافت می‌نمایید و این مقدار از **billNumber** که توسط خود کسب و کار انتخاب شده است، متمایز می‌باشد.
+
+در این حالت، مشتری باید لاگین باشد و در صورتی که شناسه اشتباه وارد شود با خطای " **فاکتور یافت نشد** " مواجه می شود.
+
+```
+GET [private-calls-address]/v1/pbc/payinvoice/
+
+?invoiceId=[invoice id]*
+&redirectUri=[redirectURL]
+&callUri=[The function that will be called at the end of payment]
+```
+
+پارامتر **redirectUri** آدرسی است که بعد از پرداخت کاربر به آن هدایت می گردد، پارامتر **callUri** نیز آدرسی در سرور شما میتواند باشد که در صورت موفق بودن پرداخت فراخوانی می گردد. پس از پرداخت پارامترهای زیر به صورت **GET** به آدرس **redirectUri** برگردانده می شود:
+
+billNumber&paymentBillNumber&invoiceId&paid&terminalId&maskedCardNumber
+
+پس از دریافت این مقادیر در اپلیکیشن یا وبسایت خود، میتوانید سایر عملیات از جمله استعلام فاکتور و تایید پرداخت را انجام دهید.
+
+**2. پرداخت از کیف پول کسب و کار با توکن کسب و کاری**
+
+جهت پرداخت فاکتور با حساب کیف پول کسب و کار (حالت دوم) در صورتی که فاکتور مشخصا برای شما صادر شده باشد میتوانید از سرویس زیر استفاده نمایید:
+
+```
+HEADER
+        _token_=[api_token]
+        _token_issuer_=1
+        _ott_=[OTT]
+Method: POST
+Url:     [platform-address]/nzh/payInvoiceByCredit/
+Parameters:
+        invoiceId= *                //the invoice id to be paid
+        delegatorId=               //the userId of delegator if want to pay by delegation
+        delegationHash=          //the delegation HASH
+        forceDelegation=          //true/false, put true if want delegation to be used only
+```
+
+در صورتی که فاکتور برای شما صادر نشده یا اصلا کاربر ندارد، جهت پرداخت آن از سرویس زیر استفاده نمایید:
+
+```
+HEADER
+        _token_=[api_token]
+        _token_issuer_=1
+        _ott_=[OTT]
+Method: POST
+Url:     [platform-address]/nzh/payAnyInvoiceByCredit/
+Parameters:
+        invoiceId= *                //the invoice id to be paid
+        delegatorId=               //the userId of delegator if want to pay by delegation
+        delegationHash=          //the delegation HASH
+        forceDelegation=          //true/false, put true if want delegation to be used only
+```
+
+در هردو سرویس بالا، مقادیر قابل ارسال به شرح زیر می باشند. دقت نمایید مقادیر لیستی به صورت urlencoded ارسال شوند.
+
+پارامترهای سرویس پرداخت فاکتور با کیف پول به شرح زیر است:
+
+| نام پارامتر     | اجباری | شرح                                                          |
+| --------------- | ------ | ------------------------------------------------------------ |
+| invoiceId       | \*     | شناسه فاکتور که لازم است از صادر کننده ی فاکتور دریافت گردد  |
+| delegatorId     |        | لیست شناسه کاربری تفویض کننده (userId)؛ در صورتی که شخص یا سازمانی اعتبار خرید در اختیار شما قرار داده است، میتوانید در این پارامتر لیستی از شناسه ی آنها را به ترتیب اولویت استفاده ارسال نمایید. |
+| delegationHash  |        | لیست کد hash اعتبارات که دقیقا اعتبار مورد نظر را مشخص می نماید. |
+| forceDelegation |        | در صورتی که true باشد، پرداخت حتما و فقط از اعتبارات صورت میگیرد و در صورت عدم کفایت یا عدم تطابق اعتبارات با فاکتور، خطا برگردانده می شود. در صورت ارسال false، مبلغ باقیمانده از کیف پول پرداخت می گردد. |
+
+## پرداخت از طریق درگاه
+
+کسب و کار میتواند برای تمام مشتریان خود، بدون نیاز به ورود به سامانه احراز هویت یکپارچه، امکان خرید را از طریق لینک زیر فراهم کند. برای این منظور لازم است کسب و کار از کد یکتا که برای فاکتور تولید می شود استفاده نماید.
+
+مراحل انجام کار به ترتیب:
+
+1. ثبت نام کسب و کار در https://services.pod.land
+2. دریافت توکن جهت فراخوانی سرویس ها
+3. ثبت فاکتور : دقت نمایید در صورت تمایل به نمایش شماره کارت های مربوط به مشتری، در صفحه درگاه ضروری است شناسه کاربر (userId) در فاکتور ثبت شود. این شناسه پس از ورود کاربر از طریق SSO بدست آمده یا می تواند شناسه ی کاربر آفلاین (غیر SSO) باشد. در صورتی که شماره موبایل مربوط به هیچکدام از این دودسته نیست، می توان با ثبت شماره موبایل (cellphoneNumber) در فاکتور، همین نتیجه را دریافت نمود.
+4. هدایت کاربر به درگاه (توسط لینک زیر)
+5. تایید پرداخت
+6. بستن فاکتور
+7. تسویه
+
+```
+Method: GET
+Url:
+        [private-calls-address]/v1/pbc/payInvoiceByUniqueNumber/
+Parameters:
+        uniqueNumber=[the uniqueNumber in invoice]*
+        redirectUri=[redirectURL]
+        callUri=[The function that will be called at the end of payment]
+        gateway=PEP
+```
+
+پارامتر **redirectUri** آدرسی است که بعد از پرداخت کاربر به آن هدایت می گردد، پارامتر **callUri** نیز آدرسی در سرور شما میتواند باشد که در صورت موفق بودن پرداخت فراخوانی می گردد. پس از پرداخت پارمترهای زیر به صورت **GET** به آدرس **redirectUri** برگردانده می شود.
+
+```
+billNumber
+&paymentBillNumber
+&invoiceId
+&paid
+&terminalId
+&maskedCardNumber
+```
+
+**توجه:** در صورتی که پارامتر **gateway** ارسال شود کاربر مستقیم به درگاه پرداخت بانک پاسارگاد متنقل می گردد. در غیر این صورت در صفحه ای که نمایش داده میشود کاربر می تواند وارد SSO شود و از امکانات کیف پول خود نیز استفاده نماید.
+
+اگر مقدار **uniqueNumber** اشتباه ارسال شود، به صفحه "صفحه یافت نشد" هدایت می شوید.
+
+## پرداخت با پیامک
+
+**پرداخت فاکتور با کیف پول از طریق پیامک**
+
+در صورتی که کاربر به رایانه جهت پرداخت دسترسی ندارد، یا در فروش حضوری، کسب و کار میتواند درخواست ارسال پیامک پرداخت به کاربر دهد و کاربر با پیامک کردن کدی که دریافت کرده به همان شماره، فاکتور را از کیف پول خود پرداخت مینماید.
+
+```
+HEADER
+        _token_=[api_token]
+        _token_issuer_=1
+METHOD: GET
+URL: [platform-address]/nzh/biz/sendInvoicePaymentSMS/
+Parameters:
+        invoiceId=[the invoice id to pay by sms]*
+        wallet
+        callbackUri
+        redirectUri
+        delegationId
+        forceDelegation
+```
+
+پس از فراخوانی سرویس بالا، پیامکی حاوی یک کد و یک لینک پرداخت برای کاربر پیامک می گردد. کاربر می تواند با مراجعه به لینک پرداخت، یک پیش نمایش از فاکتور را ببیند، آن را از طریق درگاه بانکی پرداخت نماید یا وارد SSO شود و از امکانات کیف پول استفاده نماید.
+
+از طریق سرویس بالا همچنین می توان لیستی از شناسه های اعتبار اختصاصی کاربر را نیز جهت استفاده در پرداخت فاکتور ارسال نمود. به این ترتیب لیست اعتباراتی که با ارسال کد استفاده می شوند، در پیامک به کاربر اعلام می گردد.
+
+## سایر روش های پرداخت فاکتور
+
+**پرداخت فاکتور خارج از پلتفرم پاد**
+
+در صورتی که فاکتور به هر شکلی بجز امکانات موجود در پلتفرم پاد پرداخت شد، میتوانید با استفاده از سرویس زیر، وضعیت آن را به حالت پرداخت شده ببرید. در این روش هیچ گونه سند مالی در پلتفرم ثبت نشده و به اعتبار افزوده نمی شود.
+
+دقت نمایید که کسب و کار فقط می تواند فاکتورهایی که خودش صادر نموده را با این روش پرداخت کند.
+
+```
+HEADER:
+        _token_=[api_token]
+        _token_issuer_=1
+Method:  GET
+Url:    [platform-address]/nzh/biz/payInvoice/
+Parameters:
+        invoiceId=[invoice id]*	
+```
+
+
+
+
+
+
+
+
+
+
+
