Update درگاه پرداخت - 02.md

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -97,6 +97,9 @@ Parameters:
 | delegationHash  |        | لیست کد hash اعتبارات که دقیقا اعتبار مورد نظر را مشخص می نماید. |
 | forceDelegation |        | در صورتی که true باشد، پرداخت حتما و فقط از اعتبارات صورت میگیرد و در صورت عدم کفایت یا عدم تطابق اعتبارات با فاکتور، خطا برگردانده می شود. در صورت ارسال false، مبلغ باقیمانده از کیف پول پرداخت می گردد. |
 
+<div class="box-end">
+</div>
+
 ## پرداخت از طریق درگاه
 
 کسب و کار میتواند برای تمام مشتریان خود، بدون نیاز به ورود به سامانه احراز هویت یکپارچه، امکان خرید را از طریق لینک زیر فراهم کند. برای این منظور لازم است کسب و کار از کد یکتا که برای فاکتور تولید می شود استفاده نماید.
@@ -137,6 +140,10 @@ billNumber
 
 اگر مقدار **uniqueNumber** اشتباه ارسال شود، به صفحه "صفحه یافت نشد" هدایت می شوید.
 
+<div class="box-end">
+</div>
+
+
 ## پرداخت با پیامک
 
 **پرداخت فاکتور با کیف پول از طریق پیامک**
@@ -162,6 +169,9 @@ Parameters:
 
 از طریق سرویس بالا همچنین می توان لیستی از شناسه های اعتبار اختصاصی کاربر را نیز جهت استفاده در پرداخت فاکتور ارسال نمود. به این ترتیب لیست اعتباراتی که با ارسال کد استفاده می شوند، در پیامک به کاربر اعلام می گردد.
 
+<div class="box-end">
+</div>
+
 ## سایر روش های پرداخت فاکتور
 
 **پرداخت فاکتور خارج از پلتفرم پاد**
@@ -181,7 +191,8 @@ Parameters:
 ```
 
 
-
+<div class="box-end">
+</div>
 
 
 
