Update درگاه پرداخت - 02.md

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -36,7 +36,7 @@ Parameters:
 
 در این حالت، مشتری باید لاگین باشد و در صورتی که شناسه اشتباه وارد شود با خطای " **فاکتور یافت نشد** " مواجه می شود.
 
-```
+```curl
 GET [private-calls-address]/v1/pbc/payinvoice/
 
 ?invoiceId=[invoice id]*
@@ -54,7 +54,7 @@ billNumber&paymentBillNumber&invoiceId&paid&terminalId&maskedCardNumber
 
 جهت پرداخت فاکتور با حساب کیف پول کسب و کار (حالت دوم) در صورتی که فاکتور مشخصا برای شما صادر شده باشد میتوانید از سرویس زیر استفاده نمایید:
 
-```
+```curl
 HEADER
         _token_=[api_token]
         _token_issuer_=1
@@ -70,7 +70,7 @@ Parameters:
 
 در صورتی که فاکتور برای شما صادر نشده یا اصلا کاربر ندارد، جهت پرداخت آن از سرویس زیر استفاده نمایید:
 
-```
+```curl
 HEADER
         _token_=[api_token]
         _token_issuer_=1
@@ -112,7 +112,7 @@ Parameters:
 6. بستن فاکتور
 7. تسویه
 
-```
+```curl
 Method: GET
 Url:
         [private-calls-address]/v1/pbc/payInvoiceByUniqueNumber/
@@ -125,7 +125,7 @@ Parameters:
 
 پارامتر **redirectUri** آدرسی است که بعد از پرداخت کاربر به آن هدایت می گردد، پارامتر **callUri** نیز آدرسی در سرور شما میتواند باشد که در صورت موفق بودن پرداخت فراخوانی می گردد. پس از پرداخت پارمترهای زیر به صورت **GET** به آدرس **redirectUri** برگردانده می شود.
 
-```
+```curl
 billNumber
 &paymentBillNumber
 &invoiceId
@@ -147,7 +147,7 @@ billNumber
 
 در صورتی که کاربر به رایانه جهت پرداخت دسترسی ندارد، یا در فروش حضوری، کسب و کار میتواند درخواست ارسال پیامک پرداخت به کاربر دهد و کاربر با پیامک کردن کدی که دریافت کرده به همان شماره، فاکتور را از کیف پول خود پرداخت مینماید.
 
-```
+```curl
 HEADER
         _token_=[api_token]
         _token_issuer_=1
@@ -177,7 +177,7 @@ Parameters:
 
 دقت نمایید که کسب و کار فقط می تواند فاکتورهایی که خودش صادر نموده را با این روش پرداخت کند.
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
