Update 01 - عملیات سپرده.md

--- a/Banking/01 - عملیات سپرده.md
+++ b/Banking/01 - عملیات سپرده.md
@@ -1,3 +1,13 @@
+- [عملیات سپرده](#%D8%B9%D9%85%D9%84%DB%8C%D8%A7%D8%AA-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87)
+- [سرویس پایا بانک پاسارگاد](#%D8%B3%D8%B1%D9%88%DB%8C%D8%B3-%D9%BE%D8%A7%DB%8C%D8%A7-%D8%A8%D8%A7%D9%86%DA%A9-%D9%BE%D8%A7%D8%B3%D8%A7%D8%B1%DA%AF%D8%A7%D8%AF)
+- [دریافت صورتحساب سپرده](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D8%B5%D9%88%D8%B1%D8%AA%D8%AD%D8%B3%D8%A7%D8%A8-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87)
+- [دریافت موجودی سپرده](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D9%85%D9%88%D8%AC%D9%88%D8%AF%DB%8C-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87)
+- [انتقال وجه داخلی پایا](#%D8%A7%D9%86%D8%AA%D9%82%D8%A7%D9%84-%D9%88%D8%AC%D9%87-%D8%AF%D8%A7%D8%AE%D9%84%DB%8C-%D9%BE%D8%A7%DB%8C%D8%A7)
+- [دریافت وضعیت انتقال وجه](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D9%88%D8%B6%D8%B9%DB%8C%D8%AA-%D8%A7%D9%86%D8%AA%D9%82%D8%A7%D9%84-%D9%88%D8%AC%D9%87)
+- [پرداخت قبض از طریق سپرده](#%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D9%82%D8%A8%D8%B6-%D8%A7%D8%B2-%D8%B7%D8%B1%DB%8C%D9%82-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87)
+- [تبدیل شماره سپرده به شبا](#%D8%AA%D8%A8%D8%AF%DB%8C%D9%84-%D8%B4%D9%85%D8%A7%D8%B1%D9%87-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87-%D8%A8%D9%87-%D8%B4%D8%A8%D8%A7)
+- [تبدیل شبا به سپرده](#%D8%AA%D8%A8%D8%AF%DB%8C%D9%84-%D8%B4%D8%A8%D8%A7-%D8%A8%D9%87-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87)
+- [دریافت اطلاعات شبا](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D8%A7%D8%B7%D9%84%D8%A7%D8%B9%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7)
 
 ## عملیات سپرده
 
