--- a/Banking/پرداخت قبض - 08.md
+++ b/Banking/پرداخت قبض - 08.md
@@ -1,3 +1,6 @@
+- [مقدمه](#%D9%85%D9%82%D8%AF%D9%85%D9%87)
+- [پرداخت قبض](#%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D9%82%D8%A8%D8%B6)
+
 ## مقدمه
 اگر به دنبال پیاده‌سازی امکان پرداخت قبوض در برنامه ی خود می‌باشید، با استفاده از این سرویس امکان انجام آن را خواهید داشت.
 ## پرداخت قبض
