Update - Table of Content

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -1,3 +1,9 @@
+- [درگاه پرداخت](#%D8%AF%D8%B1%DA%AF%D8%A7%D9%87-%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA)
+- [پرداخت فاکتور با کیف پول](#%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D9%81%D8%A7%DA%A9%D8%AA%D9%88%D8%B1-%D8%A8%D8%A7-%DA%A9%DB%8C%D9%81-%D9%BE%D9%88%D9%84)
+- [پرداخت از طریق درگاه](#%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D8%A7%D8%B2-%D8%B7%D8%B1%DB%8C%D9%82-%D8%AF%D8%B1%DA%AF%D8%A7%D9%87)
+- [پرداخت با پیامک](#%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D8%A8%D8%A7-%D9%BE%DB%8C%D8%A7%D9%85%DA%A9)
+- [سایر روش های پرداخت فاکتور](#%D8%B3%D8%A7%DB%8C%D8%B1-%D8%B1%D9%88%D8%B4-%D9%87%D8%A7%DB%8C-%D9%BE%D8%B1%D8%AF%D8%A7%D8%AE%D8%AA-%D9%81%D8%A7%DA%A9%D8%AA%D9%88%D8%B1)
+
 ## درگاه پرداخت
  اگر قصد دارید سرویس‌هایی مانند راه‌اندازی درگاه پرداخت انواع قبض موبایل و تلفن، خرید انواع بلیط سفر و هتل، خرید بلیط قطار، خرید و سفارش انواع بیمه، شارژ و ... را در برنامه‌ی خود پیاده‌سازی کنید می‌توانید به راحتی از این سرویس‌ها در برنامه‌ی خود استفاده کنید.
 
