Update عملیات چک بانکی - 05.md

--- a/Banking/عملیات چک بانکی - 05.md
+++ b/Banking/عملیات چک بانکی - 05.md
@@ -1,7 +1,5 @@
-- [عملیات چک بانکی](#%D8%B9%D9%85%D9%84%DB%8C%D8%A7%D8%AA+%DA%86%DA%A9+%D8%A8%D8%A7%D9%86%DA%A9%DB%8C)
-- [استعلام چک های واگذار شده](#%D8%A7%D8%B3%D8%AA%D8%B9%D9%84%D8%A7%D9%85%20%DA%86%DA%A9%20%D9%87%D8%A7%DB%8C%20%D9%88%D8%A7%DA%AF%D8%B0%D8%A7%D8%B1%20%D8%B4%D8%AF%D9%87)
-
-
+- [عملیات چک بانکی](#%D8%B9%D9%85%D9%84%DB%8C%D8%A7%D8%AA-%DA%86%DA%A9-%D8%A8%D8%A7%D9%86%DA%A9%DB%8C)
+- [استعلام چک های واگذار شده](#%D8%A7%D8%B3%D8%AA%D8%B9%D9%84%D8%A7%D9%85-%DA%86%DA%A9-%D9%87%D8%A7%DB%8C-%D9%88%D8%A7%DA%AF%D8%B0%D8%A7%D8%B1-%D8%B4%D8%AF%D9%87)
 
 ## عملیات چک بانکی
 با استفاده از این سرویس شما می‌توانید گزارش‌های کامل و دقیقی در مورد روند اقساط و همچنین چک‌های واگذار شده‌ی کاربران در اختیار آن‌ها قرار دهید.
