Update 00 - احراز هویت.md

--- a/Banking/احراز هویت/00 - احراز هویت.md
+++ b/Banking/احراز هویت/00 - احراز هویت.md
@@ -79,7 +79,7 @@
 
 ```
 
-### دریافت توکن دسترسی کاربر
+## دریافت توکن دسترسی کاربر
 پس از دریافت کد برای دریافت توکن دسترسی کاربربا استفاده از نمونه کد زیر و با پر کردن پارامترهای ورودی می توانید توکن دسترسی کاربر را دریافت نمایید.
 
 ```php
