Update 00 - فاکتور.md

--- a/Banking/فاکتور/00 - فاکتور.md
+++ b/Banking/فاکتور/00 - فاکتور.md
@@ -1,7 +1,7 @@
-خرید (فاکتور) [](#)
+- [خرید](#%خرید)
 -------------------
 
- **خرید در یک نگاه**
+##خرید در یک نگاه
 
  خرید فعالیتی است که مشتری، محصول یا خدماتی را که توسط کسب‌و‌کاری ارائه شده است را جستجو و در ازای پرداخت هزینه استفاده می‌کند. در خرید آنلاین، فرآیند جستجو، تعامل فروشنده و مشتری، پرداخت و رهگیری در بستر شبکه اینترنت انجام می‌شود. مراحل خرید پس از انتخاب محصول توسط مشتری تا اتمام فرآیند توسط فروشنده به طور اجمالی شامل این مراحل است.
 
@@ -11,7 +11,7 @@
 
  
 
- **صدور فاکتور**
+##صدور فاکتور
 
  هرگونه پرداخت در پلتفرم پاد، از طریق فاکتور صورت می گیرد. در این بخش صدور فاکتور با استفاده از توکن کسب و کار شرح داده شده و می توان با خروجی حاصل از این متد، کاربر را به راحتی به درگاه پرداخت هدایت نمود. برای صدور فاکتور از سرویس issueInvoice استفاده نمایید.  
  مقدار api\_token (توکن کسب و کار) را از پنل [ مدیریت کسب و کار ](https://panel.pod.land/Businesses/Keys) دریافت نمایید.
@@ -42,7 +42,8 @@
   |56 |INVALID\_GUILD\_AMOUNT |پارامتر کد صنف به درستی ارسال نشده است. |
   |66 |INVOICE\_SAME\_BIZ\_AND\_CUSTOMER |اگر توکن(\_token\_) و شناسه ی کاربر(userId) ای که استفاده می نمایید متعلق به یک کسب و کار باشد، این خطا را دریافت می کنید. چرا که صدور فاکتور از کسب و کار خودتان برای خودتان امکان پذیر نیست. به مستند افزودن کسب و کار واسط مراجعه نمایید. کسب و کار جدیدی ثبت نمایید، و به این کسب وکار مجوز صدور فاکتور برای یک محصول خاص(ارجاع به مستند مجوز فروش محصول)، اعطا نمایید و سپس نسبت به صدور فاکتور اقدام نمایید. |
   |999 |UNKNOWN |خطای داخلی |
-   **نمایش پیش فاکتور**
+
+##نمایش پیش فاکتور
 
  در پلتفرم کسب و کار، فاکتورهایی که پرداخت می شوند به صورت سالانه شماره سریال دریافت می نمایند، بنابرین کسب و کار می تواند برای امور مالی خود به آن شماره سریال استناد نماید. در برخی شرایط، ممکن است کسب و کار بخواهد فاکتور تا زمانی که اقدام به پرداخت آن نشده اصلاً ثبت نگردد. بدین منظور با استفاده از سرویس createPreInvoice می تواند پیش فاکتور را ثبت نماید. به محض اینکه مشتری، فاکتور را با کیف پول خود پرداخت نماید یا برای پرداخت وارد درگاه بانکی شود، فاکتور ثبت می گردد. در صورتی که مشتری پرداخت را از طریق درگاه لغو نماید یا اشکالی در پرداخت او به وجود آید، فاکتور به صورت خودکار لغو خواهد شد.
 
@@ -54,7 +55,7 @@
 https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 ```
 
- **لیست فاکتورها**
+ ##لیست فاکتورها
 
  برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.land مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.  
  همچنین می توانید برای استفاده در برنامه خود، از API زیر استفاده نمایید.
@@ -68,7 +69,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 
  
 
- **جستجو در متادیتا فاکتورها**
+##جستجو در متادیتا فاکتورها
 
  همچنین برای جستجو در متادیتای ثبت شده برای فاکتور می توانید از سرویس زیر استفاده نمایید
 
@@ -76,7 +77,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 
  
 
- **تایید پرداخت فاکتور**
+##تایید پرداخت فاکتور
 
  در صورتی که در صدور فاکتور پارامتر verificationNeeded را با مقدار true ارسال نموده باشید، پرداخت سه مرحله ای فعال شده است. به این معنی که پس از هدایت کاربر به صفحه پرداخت(فقط در صورت پرداخت فاکتور از طریق اتصال به درگاه می توانید سرویس تایید فاکتور را صدا بزنید) و دریافت پاسخ در redirectUri لازم است پرداخت توسط کسب و کار با استفاده از سرویس verifyInvoice تایید شود.  
  بدین ترتیب در صورتی که در فرایند پرداخت اشکالی به وجود بیاید یا به علت قطعی شبکه، عملیات به redirectUri منتقل نشود، کسب و کار نباید پرداخت را تایید نماید و اگر مبلغی توسط مشتری پرداخت شده باشد، ظرف مدت یک ساعت به حساب کیف پول او برگشت زده خواهد شد. در طول این یک ساعت، فاکتور با وضعیت «در انتظار تایید» در پنل مدیریت کسب و کار قابل مشاهده است.
@@ -87,14 +88,14 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 
  
 
- **بستن فاکتور**
+##بستن فاکتور
 
  فاکتور هایی که بسته شوند دیگر قابل ابطال نیستند. برای اینکه بتوانید مبالغ فروش خود را تسویه نمایید لازم است حتما فاکتورها را ببندید.  
  چنان چه فاکتورها به صورت safe=true صادر شده باشد و یا فاکتور متعلق به کسب و کار شما نباشد پیغام خطای " اجازه بستن این فاکتور را ندارید " دریافت خواهید کرد.
 
  
 
- **تایید و بستن فاکتور در یک مرحله**
+##تایید و بستن فاکتور در یک مرحله
 
  با فراخوانی سرویس verifyAndCloseInvoice، می‌توانید همزمان تایید و بستن فاکتور را انجام دهید  
  هنگام استفاده از این وب سرویس به نکات زیر دقت نمایید:
@@ -106,7 +107,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
  
 
 
- **ابطال فاکتور**
+##ابطال فاکتور
 
  در صورتی که به هر دلیل بخواهید فاکتوری را ابطال کنید می توانید از سرویس cancelInvoice استفاده کنید.  
  در صورتی که فاکتور باطل شود، دیگر قابل پرداخت نیست و در صورتی که قبلا پرداخت شده باشد، مبلغ آن به پرداخت کننده برگشت خواهد خورد.  
@@ -114,7 +115,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 
  
 
- **کاهش فاکتور**
+##کاهش فاکتور
 
  در مواردی ممکن است نیاز به تغییری در بندهای فاکتور داشته باشید. در صورتی که فاکتور پرداخت نشده است، فاکتور قبلی را [باطل (cancel)](#cancelInvoice) نمایید و فاکتور جدیدی صادر کنید. اگر فاکتور پرداخت شده است(در صورتی که باید پول بیشتری از مشتری دریافت نمایید)، لازم است فاکتوری جداگانه به مبلغ افزوده شده، با ذکر دلیل صادر نموده و مشتری را مجددا برای پرداخت هدایت نمایید. در برخی مواقع لازم است مبلغی از فاکتور پرداخت شده به مشتری بازگردانده شود. برای این منظور از سرویس ReduceInvoice برای اصلاح فاکتور پرداخت شده استفاده نمایید.
 
@@ -131,7 +132,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
  
 
 
- **دریافت فایل لیست فاکتورها**
+##دریافت فایل لیست فاکتورها
 
  
 
@@ -142,7 +143,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
  برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.land مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.  
  همچنین می توانید برای استفاده در برنامه خود، از API زیر استفاده نمایید.  
 
- **دریافت فایل خروجی فاکتورها**
+##دریافت فایل خروجی فاکتورها
 
  توسط سرویس getInvoiceListAsFile امکان جستجو و دریافت فایل فاکتورهای صادر شده توسط کسب و کار قابل انجام خواهد بود و میتوانید ازخروجی این سرویس یک فایل اکسل با فیلترهای متنوع دریافت کنید.  
  بدیهی است در سرویس بالا با توجه به اختیاری بودن اکثر فیلترها اگر هیچ یک از فیلترهای اختیاری ارسال نشود گزارش حجیم تر و کاملتری در اکسل خواهید داشت و هرچه تعداد فیلترها بیشتر باشد گزارش دقیق تر و سبک تری در اختیار خواهید داشت.  
@@ -150,7 +151,7 @@ https://pay.pod.land/v1/pbc/preinvoice/{HASH}
 
  
 
- **دریافت وضعیت خروجی فاکتورها**
+##دریافت وضعیت خروجی فاکتورها
 
  جهت مشاهده وضعیت هریک از سرویس های درخواست داده شده خود میتوانید از سرویس getExportList استفاده نمایید.  
  در صورتی که هر یک از گزارش ها آماده باشد وضعیت (statusCode) آن برابر با **EXPORT\_SERVICE\_STATUS\_SUCCESSFUL** است، که به این معنی است شما می توانید آن را دانلود نمایید.  
@@ -162,7 +163,7 @@ https://core.pod.land/nzh/file/?fileId=yourFileId&hashCode=YourHashCode
 
  
 
- **خرید امن**
+##خرید امن
 
  امکان پرداخت امن برای نوع خاصی از کسب و کارها که امکان لغو یا تایید خرید را تا آخرین لحظه بر عهده مشتری می‌گذارند (مانند فروشندگان واسطه) بسیار مناسب است. در این حالت مشتری می تواند بعد از پرداخت فاکتور تا زمان اعلام شده توسط کسب و کار، آن را لغو و پول خورد را پس بگیرد یا آن را تایید نماید تا فروشنده پول خود را دریافت کند.  
  برای فعال کردن این قابلیت تنها کافیست تا در زمان [صدور فاکتور](#issueInvoice) پارامتر **safe** را برابر **true** قرار دهید.
